--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -1,9 +1,8 @@
 ---
 title: "Project 2: HaoZheng Tutorial"
-author: "Hao Zheng"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{HaoZheng Tutorial}
+  %\VignetteIndexEntry{Project 2: HaoZheng Tutorial}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -17,8 +16,4 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 library(HaoZheng)
-```
-
-```{r}
-2+2
 ```
