--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -15,13 +15,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r, Warning = False}
+```{r, Warning = FALSE}
 library(HaoZheng)
 library(stringr)
 library(ggplot2)
 library(kableExtra)
-data("my_penguins")
-data("my_gapminder")
+#data("my_penguins")
+#data("my_gapminder")
 ```
 
 
