--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -8,22 +8,12 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
-```
-
-```{r, Warning = FALSE}
-library(HaoZheng)
-library(stringr)
-library(ggplot2)
-library(kableExtra)
-#data("my_penguins")
-#data("my_gapminder")
-```
-
+---
+title: "Project 2: R Package Development and Data Analysis Project Pipeline"
+author: "INSERT YOUR NAME(S) HERE"
+date: ""
+output: html_document
+---
 
 <!--- Begin styling code. --->
 <style type="text/css">
@@ -49,6 +39,7 @@ h4.date {
 
 
 # Part 1. R Package Development (45 points)
+
 ## Instructions
 
 For this portion of Project 2, you are being asked to develop a well-documented, well-tested, and well-explained R package.
@@ -77,7 +68,6 @@ Specifically, the vignette should have 5 parts:
   H_0: \mu &= 60,\\
   H_a: \mu &\neq 60.
   \end{align}
-
   * Demonstrate a test of the hypothesis
   \begin{align}
   H_0: \mu &= 60,\\
