--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -71,6 +71,9 @@ data("my_penguins")
   \begin{align}
   H_0: \mu &= 60,\\
   H_a: \mu &\neq 60.
+```{r}
+my_t.test(my_gapminder$lifeExp, "two.sided", 60)
+```
   \end{align}
   * Demonstrate a test of the hypothesis
   \begin{align}
@@ -83,6 +86,7 @@ data("my_penguins")
   H_a: \mu &> 60.
   \end{align}
   * For each of the tests above, carefully interpret the results using a p-value cut-off of $\alpha = 0.05$.
+  
 3. A tutorial for `my_lm`
   * Demonstrate a regression using `lifeExp` as your response variable and `gdpPercap` and `continent` as explanatory variables.
   * Carefully interpret the `gdpPercap` coefficient.
@@ -90,6 +94,11 @@ data("my_penguins")
   * Carefully interpret the results the `gdpPercap` hypothesis test using a p-value cut-off of $\alpha = 0.05$.
   * Use `ggplot2` to plot the Actual vs. Fitted values.
   * Interpret the Actual vs. Fitted plot and make a statement on what it tells you about model fit.
+  
+  
+```{r}
+
+```
 4. A tutorial for `my_knn_cv` using `my_penguins`.
   * Predict output class `species` using covariates `bill_length_mm`, `bill_depth_mm`, `flipper_length_mm`, and `body_mass_g`. 
   * Use $5$-fold cross validation (`k_cv = 5`).
