--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -56,14 +56,18 @@ However, you must add and document the `gapminder` data to your own package and 
 Specifically, the vignette should have 5 parts:
 
 1. A brief introductory paragraph explaining the package
-  * This paragraph should include instructions for how to install your package from GitHub. 
+  * This paragraph should include instructions for how to install your package from GitHub.
   * The install instructions should be demonstrated with code that is not evaluated (`eval = FALSE`).
   * Make sure to include a call to `library()` for your package.
+
+  This package contains 4 methods. my_t.test, my_lm, my_knn_cv and my_rf_cv.
+You can install them from github using the code provided below.
 ```{r install, eval = FALSE}
 devtools::install_github("haoz515/HaoZheng")
 ```
-Also, we need to install the following packages to start
+Also, we need to call these libraries to get started
 ```{r setup}
+#sometimes library() does not work, we can use the require()
 #require(HaoZheng)
 library(HaoZheng)
 library(randomForest)
@@ -74,6 +78,7 @@ library(kableExtra)
 library(dplyr,warn.conflicts = FALSE)
 data("my_gapminder")
 data("my_penguins")
+# change my_penguins so that there is no empty value in it
 my_penguins_df <- my_penguins
 my_penguins_df <- na.omit(my_penguins_df)
 ```
@@ -85,23 +90,29 @@ my_penguins_df <- na.omit(my_penguins_df)
   H_a: \mu &\neq 60.
   \end{align}
 ```{r}
+# do a two sided t.test with mu = 60
 my_t.test(my_gapminder$lifeExp, "two.sided", 60)
 ```
-t-value, df, p-value and alternative hypothes are provided from the output. 
-Due to the reason that  P-value is greater than 0.05, 
+
+The null hypothesis is mu = 60
+t-value, df, p-value and alternative hypothes are provided from the output.
+Due to the reason that  P-value is greater than 0.05,
 so we cannot reject the null hypothesis.
-  
+
   * Demonstrate a test of the hypothesis
   \begin{align}
   H_0: \mu &= 60,\\
   H_a: \mu &< 60.
   \end{align}
 ```{r}
+# do a one sided t.test with mu = 60
 my_t.test(my_gapminder$lifeExp, "less", 60)
 ```
-t-value, df, p-value and alternative hypothes are provided from the output. 
-Due to the reason that  P-value is greater than 0.05, 
-so we cannot reject the null hypothesis.
+
+The null hypothesis is mu = 60
+t-value, df, p-value and alternative hypothes are provided from the output.
+Due to the reason that  P-value is less than 0.05,
+so we can reject the null hypothesis and mu is less than 60
 
   *  Demonstrate a test of the hypothesis
   \begin{align}
@@ -110,11 +121,12 @@ so we cannot reject the null hypothesis.
   \end{align}
   * For each of the tests above, carefully interpret the results using a p-value cut-off of $\alpha = 0.05$.
 ```{r}
+# do a one sided t.test with mu = 60
 my_t.test(my_gapminder$lifeExp, "greater", 60)
 ```
-t-value, df, p-value and alternative hypothes are provided from the output. 
-Due to the reason that  P-value is less than 0.05, 
-so we reject the null hypothesis.
+t-value, df, p-value and alternative hypothes are provided from the output.
+Due to the reason that  P-value is greater than 0.05,
+so we cannot reject the null hypothesis.
 
 3. A tutorial for `my_lm`
   * Demonstrate a regression using `lifeExp` as your response variable and `gdpPercap` and `continent` as explanatory variables.
@@ -123,7 +135,8 @@ so we reject the null hypothesis.
   * Carefully interpret the results the `gdpPercap` hypothesis test using a p-value cut-off of $\alpha = 0.05$.
   * Use `ggplot2` to plot the Actual vs. Fitted values.
   * Interpret the Actual vs. Fitted plot and make a statement on what it tells you about model fit.
-```{r}  
+```{r}
+#using my_lm to fit the values
 lm_1 <- my_lm(lifeExp ~ gdpPercap + continent, data = my_gapminder)
 lm_1
 ```
@@ -133,38 +146,46 @@ Here we set up a hypothesis test for the gpdPercap coefficient
 $$H_0: coefficient = 0$$
 
 $$H_a: coefficient \neq 0$$
-with our significance level
+with significance level
 $$ \alpha = 0.05$$
-From the output we have, p value is less than 0.05. As a result, we reject the null hypothesis.
+From the output I have, I reject the null hypothesis and support the alternative hypothes(coefficient is not 0)
+
 Here we plot the actual vs Fitted values
 ```{r}
+# set up the data
 object <- lifeExp ~ gdpPercap + continent
 model <- model.frame(object, my_gapminder)
 exp  <- model.matrix(object, my_gapminder)
 res <- model.response(model) %>% as.matrix()
 ```
 ```{r}
+# plot actual vs fitted
 my_lifeExp <- exp %*% lm_1[,1]+ lm_1[,2]
-my_plot <- data.frame("actual" = my_gapminder$lifeExp, "fitted" = my_lifeExp, 
-                      "color" = my_gapminder$continent) 
+my_plot <- data.frame("actual" = my_gapminder$lifeExp, "fitted" = my_lifeExp,
+                      "color" = my_gapminder$continent)
 my_plot %>%
   ggplot(aes(x = my_lifeExp, y = my_gapminder$lifeExp, color = color)) +
+  geom_abline(slope = 1, intercept = 0, col = "black") +
   geom_point() +
-  coord_flip() +    
-  labs(title = "Actual vs. Fitted Values", x = "fitted", 
-       y = "actual", color = "Continent") 
+  coord_flip() +
+  labs(title = "Actual vs. Fitted Values", x = "fitted",
+       y = "actual", color = "Continent")
 ```
+
+  Overall the fit looks ok. We can see a trend in the data. The line fits
+particular well from the age around 65 to 80.
+
 4. A tutorial for `my_knn_cv` using `my_penguins`.
-  * Predict output class `species` using covariates `bill_length_mm`, `bill_depth_mm`, `flipper_length_mm`, and `body_mass_g`. 
+  * Predict output class `species` using covariates `bill_length_mm`, `bill_depth_mm`, `flipper_length_mm`, and `body_mass_g`.
   * Use $5$ -fold cross validation (`k_cv = 5`).
   * Iterate from `k_nn`$= 1,\ldots, 10$:
     * For each value of `k_nn`, record the training misclassification rate and the CV misclassification rate (output from your function).
   * State which model you would choose based on the training misclassification rates and which model you would choose based on the CV misclassification rates.
-  * Discuss which model you would choose in practice and why. 
+  * Discuss which model you would choose in practice and why.
   * Your explanation(s) should include a general description of what the process of cross-validation is doing and why it is useful.
-  
+
 ```{r}
-# TODO: my_knn function is wrong for the output
+# create the matrix
 answer <- matrix(NA, nrow = 10, ncol = 2)
 rownames(answer) <- c(1:10)
 for (i in 1:10) {
@@ -177,17 +198,27 @@ answer <- data.frame("Neighbour's number" = c(1:10),
                      "training misclassification rate" = answer[, 2])
 kable_styling(kable(answer))
 ```
+
+If I only determine based on the CV misclassification rates, I would
+choose knn = 1, because it has a  training set error of 0.However, I would not
+determine only based on CV and I would choose knn = 5, because it provides
+more information and more accurate than knn = 1.
   
+The cross validation is 
+
+In short, the cross
+
 5. A tutorial for `my_rf_cv`
-  * Predict `body_mass_g` using covariates `bill_length_mm`, `bill_depth_mm`, and `flipper_length_mm`. 
+  * Predict `body_mass_g` using covariates `bill_length_mm`, `bill_depth_mm`, and `flipper_length_mm`.
   * Iterate through `k` in  `c(2, 5, 10)`:
-    * For each value of `k`, run your function $30$ times. 
+    * For each value of `k`, run your function $30$ times.
     * For each of the $30$ iterations, store the CV estimated MSE.
   * Use `ggplot2` with 3 boxplots to display these data in an informative way. There should be a boxplot associated with each value of `k`, representing $30$ simulations each.
   * Use a table to display the average CV estimate and the standard deviation of the CV estimates across $k$. Your table should have 3 rows (one for each value of $k$) and 2 columns (one for the mean and the other for the standard deviation).
   * Discuss the results you observe in the boxplots and table. Compare the means and standard deviations of the the different values of $k$ and comment on why you think this is the case.
 ```{r}
-data("my_penguins")
+# set up the data we need for fr_cv
+#data("my_penguins")
 options(dplyr.summarise.inform = FALSE)
 cv_error <- matrix(NA, nrow = 30 * 3, ncol = 2)
 cv_error[, 1] <- rep(c(2, 5, 10), each = 30)
@@ -200,29 +231,34 @@ for(k in c(2, 5, 10)) {
 }
 ```
 ```{r}
-#data("my_penguins")
+#create the ggplot
 my_df <- data.frame("mse" = cv_error[, 2], "k" = cv_error[, 1])
 my_df %>%
   ggplot(aes(x = factor(k), y = mse)) +
   geom_boxplot() +
   labs(title = "MSE", x = "Folds number", y = "MSE")
 
-mse_sum <- my_df %>% 
+mse_sum <- my_df %>%
 group_by(k) %>%
 summarise(mean = mean(mse), sd = sd(mse))
 kable_styling(kable(mse_sum))
 ```
-  
-  
+
+  Based on my obseravation, the mean MSE for 10 folds is the lowest. k = 2 is
+the opposite. 10 folds also have the lowest sd and k = 2 has the highest, which
+is consistent with the plot. Also, a higher number of folds always has higher
+accuracy and less mean square error.
+
+
 ### Details
 
 * Your package must be hosted on GitHub as a public repository. You are free to make the repository private after the course concludes.
 * Your submission for this portion of the project will be a single link to your GitHub repository.
 * Your `README.md` file should include badges for travis-ci automated testing and codecov code coverage.
-* Your `README.md` should include an `Installation` section installation instructions and a `Use` section demonstrating how to view the package vignettes. 
+* Your `README.md` should include an `Installation` section installation instructions and a `Use` section demonstrating how to view the package vignettes.
 See [my package](https://github.com/bryandmartin/corncob) for an example.
 * Your package should pass all checks implemented in `devtools::check()`.
-* Your code coverage should be at or near 100%. 
+* Your code coverage should be at or near 100%.
 * Each of the 4 main functions should include at least one of `inference`/ `prediction` as `@keywords`, depending on what the function is primarily used for.
 * Each function must include `@examples`.
 * This is a software vignette, so all of your code should be displayed within your writing. Do not include a code appendix.
@@ -241,7 +277,7 @@ Your analysis should be contained on a GitHub repository and include:
 
 * A `.Rproj` file with the name of the project.
 * A `Data` subfolder with the raw, unprocessed data.
-  * Within `Data`, save the `my_gapminder` and `my_penguins` data as a raw `.csv`. 
+  * Within `Data`, save the `my_gapminder` and `my_penguins` data as a raw `.csv`.
 * A `Code` subfolder with code to be loaded by your analysis files.
   * Include `my_rf_cv.R` from your package in Part 1. You can include it exactly as it appears in your package, including documentation. Good `roxygen2` style documentation is not limited to packages!
 * An `Analysis` subfolder.
